public/css/listeo/custom.css
/* 02-layout-components.css override */
input,
input[type="text"],
input[type="password"],
input[type="email"],
input[type="number"],
textarea,
select {
  color: #000;
}

input:focus,
input[type="text"]:focus,
input[type="password"]:focus,
input[type="email"]:focus,
input[type="number"]:focus,
textarea:focus {
  color: #000;
}

.main-search-input {
  margin-top: 0;
}

.main-search-input-item.service {
  flex: 1.25;
}
.main-search-input-item.suburb {
  flex: 1;
}
.main-search-input-item.date {
  flex: 1;
}
.main-search-input-item.time {
  flex: 1;
}

#side-logo img {
  max-height: 38px;
  width: auto;
  transform: translate3d(0, 0, 0);
}

/* Pricing Menu List
	------------------------------------- */
.pricing-list-container h4 {
  color: #fff;
  background-color: #00aca4;
  border-bottom: none;
  width: 100%;
  padding: 0.25em 1em;
  border-radius: 0;
  position: relative;
  z-index: 10;
  margin: 0;
  display: block;
  font-weight: 500;
  font-size: 1.5em;
}

.pricing-list-container h4 span {
  right: 1rem;
}

.pricing-list-container h4:after {
  width: 100%;
  height: 100%;
  border-radius: 0;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  content: none;
  background-color: none;
  opacity: none;
  z-index: 9;
}

.pricing-list-container h5 {
  padding: 1em 1.5em;
}

.pricing-list-container h5 span {
  right: 1rem;
}

.pricing-list-container i {
  color: #fff;
  font-weight: 500;
  font-size: 1.5em;
}

.pricing-list-container ul {
  margin-bottom: 0;
}

.pricing-list-container ul:last-child {
  margin-bottom: 0;
}

.pricing-list-container .pricing-list-section {
  margin-bottom: 1rem;
}

.pricing-list-container ul li {
  padding: 0;
  position: relative;
}

.pricing-list-container ul li:last-child {
  border-radius: 0;
}

.pricing-list-container ul li a {
  display: inline-block;
  width: 100%;
  height: 100%;
}

/* Listing Reviews */
.listing-reviews ul li {
  border-bottom: none;
  padding-bottom: 0;
}

/* 03-shortcodes.css override */
.listing-item-container {
  border-radius: 0;
  margin-bottom: 0;
}

.listing-item-container:hover {
  transform: translate3d(0, 0, 0);
}

.main-search-container h4 {
  margin-top: 0;
}

.listing-item {
  border-radius: 3px;
}

.listing-item:before {
  content: "";
  top: 0;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 9;
  background: -webkit-linear-gradient(
    bottom,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 15%,
    rgba(22, 22, 23, 0) 30%,
    rgba(0, 0, 0, 0) 100%
  );
  background: -o-linear-gradient(
    bottom,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 15%,
    rgba(22, 22, 23, 0) 30%,
    rgba(0, 0, 0, 0) 100%
  );
  background: linear-gradient(
    to top,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 15%,
    rgba(22, 22, 23, 0) 30%,
    rgba(0, 0, 0, 0) 100%
  );
  background-color: rgba(35, 35, 37, 0.2);
  border-radius: 3px;
  opacity: 1;
}

.listing-item img {
  border-radius: 3px;
}

.listing-item-content {
  bottom: 12px;
  padding: 0 12px;
}

.listing-item-content #avatar {
  float: left;
  margin-right: 8px;
}

#not-found i {
  font-size: 14px;
  top: 0px;
  position: relative;
}

.listing-item-container .listing-item-info {
  padding: 8px;
  color: #606060;
  font-size: 15px;
  min-height: 96px;
}

.listing-item-container .listing-item-info .services-blurb {
  color: #909090;
  font-size: 12px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-bottom: 4px;
}

/* 04-dashboard.css override */
.dashboard-content {
  padding: 0 0 40px 0;
}

/* 05-script-styles.css override */
.category-box {
  border-radius: 3px;
  margin-bottom: 0px;
}

.category-box:before {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 9;
  background: -webkit-linear-gradient(
    bottom,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 5%,
    rgba(22, 22, 23, 0) 20%,
    rgba(0, 0, 0, 0) 100%
  );
  background: -o-linear-gradient(
    bottom,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 5%,
    rgba(22, 22, 23, 0) 20%,
    rgba(0, 0, 0, 0) 100%
  );
  background: linear-gradient(
    to top,
    rgba(35, 35, 37, 0.9) 0%,
    rgba(35, 35, 37, 0.45) 5%,
    rgba(22, 22, 23, 0) 20%,
    rgba(0, 0, 0, 0) 100%
  );
}

.category-box-content {
  bottom: 12px;
  text-align: center;
  left: 8px;
  width: calc(100% - 16px);
}

.category-box-content h3 {
  color: #fff;
  font-size: 1.5rem;
  font-weight: 500;
  padding: 2px 0;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* 07-media-queries.css */
@media (max-width: 767px) {
  .main-search-container h2 {
    font-size: 26px;
    font-weight: 400;
    line-height: 36px;
  }
}

